--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "phlpdtrt/dev-config",
   "description": "N/A",
   "require": {
-    "php": "7.0.2|7.0.4|~7.0.6",
+    "php": "7.0.2|7.0.4|~7.0.6|~7.1.0",
     "magento/framework": "100.1.*"
   },
   "type": "magento2-module",
